fixed viewports for the footer to work on smaller breakpoints

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -11,8 +11,10 @@
     margin: 0;
   }
 
-  @media screen and (min-width : 320px) and (max-width: 576px) {
-    .copyrightSection {
-      font-size: x-small;
+  @media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 812px) {
+    .copyrightSection p {
+      font-size: smaller;
     }
   }
